--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,49 +1,53 @@
 {% load static %}
 <header class="main_menu home_menu">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-12">
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="{% url 'website:index' %}"> <img src="{% static 'img/logo.png' %}" alt="logo"> </a>
-                        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-12">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <a class="navbar-brand" href="{% url 'website:index' %}"> <img src="{% static 'img/logo.png' %}"
+                                                                                   alt="logo"> </a>
+                    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                        <div class="navbar-collapse main-menu-item justify-content-end collapse" id="navbarSupportedContent" style="">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'website:index' %}">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'website:about' %}">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'food:menu' %}">Menu</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'food:chefs' %}">Chefs</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'blog:index' %}">Blog</a>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'website:contact' %}">Contact</a>
-                                </li>
-                                <li class="nav-item">
-                                    {% if user.is_authenticated %}
-                                    <a href="{% url 'accounts:logout' %}">Logout</a>
-                                    {% else %}
-                                    <a href="{% url 'accounts:auth' %}">Login/Signup</a>
-                                    {% endif %}
-                                </li>
+                    <div class="navbar-collapse main-menu-item justify-content-end collapse" id="navbarSupportedContent"
+                         style="">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'website:index' %}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'website:about' %}">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'food:menu' %}">Menu</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'food:chefs' %}">Chefs</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'blog:index' %}">Blog</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'website:contact' %}">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                {% if user.is_authenticated %}
+                                <a href="{% url 'accounts:logout' %}">Logout</a>
+                                {% else %}
+                                <a href="{% url 'accounts:auth' %}">Login/Signup</a>
+                                {% endif %}
+                            </li>
 
-                            </ul>
-                        </div>
-                        <div class="menu_btn">
-                            <a href="#" class="btn_1 d-none d-sm-block">book a tabel</a>
-                        </div>
-                    </nav>
-                </div>
+                        </ul>
+                    </div>
+                    <div class="menu_btn">
+                        <a href="{% url 'website:index' %}#reservation" class="btn_4">Book A Table</a>
+                    </div>
+                </nav>
             </div>
         </div>
-    </header>
+    </div>
+</header>
 
